# ondrivefs_bmideas

./: .gitignore  Cargo.daemon-only.toml  Cargo.toml  LICENSE  README.md  REFACTOR_SUMMARY.md  ResolutionStrategies.MD  check_dependencies.sh  clean.sh  clean_cache.sh  local_sync.mmd  readme.md  remote_sync.mmd  start.sh  sync.md  test_dbus.sh  test_dbus_pause.rs  test_workspace.sh
.github/workflows/: rust.yml
applet/: Cargo.toml  justfile  run_ui_debug.sh
applet/resources/: app.desktop  app.metainfo.xml
applet/src/: app.rs  applet.rs  dbus_client.rs  i18n.rs  main.rs  window.rs
daemon/: Cargo.toml  DBUS_TESTING.md  dbus_test.sh  run_tests.sh  simple_dbus_test.sh  test.sh
daemon/internalDocs/: Additional.md  Authentication.md  DBModel.md  Dbus.md  Fuse.md  General.md  OneDriveApi.md  README.md  Sync.md  UsefulCommands.md
daemon/src/: app_state.rs  connectivity.rs  dbus_server.rs  file_manager.rs  fuse_filesystem.rs  helpers.rs  lib.rs  log_appender.rs  main.rs  message_broker.rs  metadata_manager_for_files.rs  sync_service.rs
daemon/src/auth/: mod.rs  onedrive_auth.rs  token_store.rs
daemon/src/dbus_server/: message_handler.rs  mod.rs  server.rs
daemon/src/fuse/: attributes.rs  cache_manager.rs  database.rs  drive_item_manager.rs  file_handles.rs  file_operations.rs  filesystem.rs  mod.rs  operations.rs  utils.rs
daemon/src/onedrive_service/: http_client.rs  onedrive_client.rs  onedrive_models.rs
daemon/src/openfs/: mod.rs  models.rs
daemon/src/operations/: mod.rs  path_utils.rs  retry.rs
daemon/src/persistency/: cached_drive_item_with_fuse_repository.rs  database.rs  download_queue_repository.rs  drive_item_repository.rs  drive_item_with_fuse_repository.rs  fuse_repository.rs  local_changes_repository.rs  mod.rs  processing_item_repository.rs  profile_repository.rs  sync_state_repository.rs  types.rs  upload_queue_repository.rs
daemon/src/scheduler/: mod.rs  periodic_scheduler.rs  simple_scheduler.rs
daemon/src/sync/: conflict_resolution.rs  conflict_resolution_tests.rs  conflicts.rs  download_processor.rs  item_processor.rs  mod.rs  move_detector.rs  strategies.rs  sync_processor.rs  sync_strategy.rs  sync_utils.rs
daemon/src/tasks/: delta_update.rs  mod.rs  status_broadcast.rs
daemon/tests/: tests.rs
daemon/tests/common/: fixtures.rs  mock_onedrive_client.rs  mod.rs  setup.rs
daemon/tests/integration/: enhanced_mock_tests.rs  fuse_test.rs  mock_appstate_tests.rs  mod.rs  onedrive_mock_tests.rs  processing_item_tests.rs
debian/: changelog  com.github.bmideas.onedrive-sync-applet.desktop  com.github.bmideas.onedrive-sync.desktop  control  copyright  debhelper-build-stamp  onedrive-sync-daemon.desktop  onedrive-sync.dirs  onedrive-sync.install  onedrive-sync.postinst  onedrive-sync.prerm  onedrive-sync.service  rules
lib/: Cargo.toml
lib/src/: client.rs  config.rs  dbus_interface.rs  dbusclient.rs  lib.rs  notifications.rs  types.rs
lib/src/dbus/: interface.rs  mod.rs  types.rs
resources/programfiles/: README.md  install.sh  onedrive-sync.xml  open-onedrive-applet.desktop  open-onedrive-daemon.desktop  open-onedrive-daemon.service  open-onedrive-ui.desktop  open-onedrive.desktop  uninstall.sh
src/: auth.rs  config.rs  file_manager.rs  helpers.rs  lib.rs  main.rs  metadata_manager.rs  metadata_manager_for_files.rs  onedrive_auth.rs  onedrive_client.rs  onedrive_fs.rs  opendrive_fuse.rs  sync.rs  sync_service.rs  token_store.rs
src/auth/: index.html  mod.rs  onedrive_auth.rs  token_store.rs
src/fuse/: mod.rs
src/onedrive_service/: http_client.rs  mod.rs  onedrive_client.rs  onedrive_models.rs
src/openfs/: mod.rs  models.rs  opendrive_fuse.rs
src/operations/: file_ops.rs  mod.rs  path_utils.rs  retry.rs
src/scheduler/: mod.rs  periodic_scheduler.rs
src/sync/: delta_sync.rs  download_processor.rs  item_processor.rs  mod.rs  move_detector.rs  sync_service.rs  sync_utils.rs
token_store/: Cargo.toml
ui/: Cargo.toml  README.md
ui/i18n/en/: onedrive_sync_ui.ftl
ui/resources/: app.desktop  app.metainfo.xml
ui/src/: app.rs  dbus_client.rs  main.rs  notifications.rs
ui/src/app/: actions.rs  context.rs  dialog.rs  menu.rs  mod.rs  model.rs  navigation.rs
ui/src/pages/: about_element.rs  conflicts_page.rs  context_page.rs  folders_page.rs  gallery_page.rs  logs_page.rs  mod.rs  queues_page.rs  status_page.rs
ui/src/pages/conflicts/: message.rs  mod.rs  page.rs
ui/src/pages/folders/: message.rs  mod.rs  page.rs  view.rs
ui/src/pages/gallery/: message.rs  mod.rs  page.rs  view.rs
ui/src/pages/logs/: message.rs  mod.rs  page.rs
ui/src/pages/queues/: message.rs  mod.rs  page.rs  view.rs
ui/src/pages/status/: message.rs  mod.rs  page.rs  view.rs
