[package]
name = "onedrive-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"
keyring = "2.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
webbrowser = "0.8"
tiny_http = "0.12"
urlencoding = "2.1"
dirs = "5.0"
sled = "0.34"
fuser = "0.12"
uuid = { version = "1.0", features = ["v4"] }
time = "0.3"
libc = "0.2"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.8"
serial_test = "0.6"

[features]
default = []
integration-tests = []