[package]
name = "onedrive-sync-applet"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "onedrive-sync applet for POP OS Cosmic "




[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
zbus = { version = "5.0", default-features = false, features = ["tokio"] }
anyhow = "1.0"
onedrive-sync-lib = { path = "../lib" }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-lite = "2.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "a11y",
    "tokio",
    "winit",
    "wayland",
    "wgpu",
    "xdg-portal",
    "desktop",
    "applet-token"
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
