[package]
name = "onedrive-sync-daemon"


#TODO: update version
version = "0.0.1"

edition = "2024"
[lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
async_fn_in_trait = "allow"

[dependencies]


# Core dependencies
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
base64 = "0.22.1"
sha2 = "0.10"
rand = "0.9.1"
keyring = "3.6.2"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
log4rs = { version = "1.3", features = ["gzip"] }
webbrowser = "1.0.5"
tiny_http = "0.12"
urlencoding = "2.1"
env_logger = "0.10"

# Database dependencies
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }

sled = "0.34"
fuser = "0.15.1"
uuid = { version = "1.0", features = ["v4"] }
time = { version = "0.3" , features = ["formatting", "parsing"] }
libc = "0.2"
ctrlc = "3.4"

# DBus dependencies
zbus = "5.0"

# Internal dependencies
onedrive-sync-lib = { path = "../lib" }

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.2"

[features]
default = []
integration-tests = [] 