[package]
name = "onedrive-sync-daemon"


#TODO: update version
version = "0.0.1"

edition = "2021"

[lib]
name = "onedrive_sync_daemon"
path = "src/lib.rs"

[[bin]]
name = "onedrive-sync-daemon"
path = "src/main.rs"
[lints.rust]

unused_variables = "allow"
unused_imports = "allow"
async_fn_in_trait = "allow"

[dependencies]


# Core dependencies
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
base64 = "0.22.1"
sha2 = "0.10"
rand = "0.9.1"
keyring = "3.6.2"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
log4rs = { version = "1.3", features = ["gzip"] }
webbrowser = "1.0.5"
tiny_http = "0.12"
urlencoding = "2.1"
env_logger = "0.10"

# Database dependencies
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }

sled = "0.34"
fuser = "0.15.1"
uuid = { version = "1.0", features = ["v4"] }
time = { version = "0.3" , features = ["formatting", "parsing"] }
libc = "0.2"
ctrlc = "3.4"

# DBus dependencies
zbus = { version = "5.0", default-features = false, features = ["tokio"] }

# Internal dependencies
onedrive-sync-lib = { path = "../lib" }
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.2"
once_cell = "1.19"
tokio-test = "0.4"

[features]
default = []
integration-tests = [] 
