[package]
name = "onedrive-sync-lib"
version = "1.0.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
directories = "5.0"

# DBus dependencies
zbus = "5.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.8" 